fixed: records overflow

--- a/Problem 2/random-record/src/Records.css
+++ b/Problem 2/random-record/src/Records.css
@@ -48,3 +48,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+.records {
+  max-height: 50vh;
+  overflow-y: scroll;
+}
